<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <cn.com.zhiwoo.view.main.MainViewPager
        android:id="@+id/viewpager_main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <RadioGroup
        android:id="@+id/tabbar_main"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x45"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/tabbar_item_consult"
            style="@style/TabBarButtonItemTheme"
            android:checked="true"
            android:drawableTop="@drawable/tabbar_button_consult_selector"
            android:text="@string/consult" />

        <RadioButton
            android:id="@+id/tabbar_item_react"
            style="@style/TabBarButtonItemTheme"
            android:drawableTop="@drawable/tabbar_button_react_selector"
            android:text="@string/react" />

        <RadioButton
            android:id="@+id/tabbar_item_tour"
            style="@style/TabBarButtonItemTheme"
            android:drawableTop="@drawable/tabbar_button_tour_selector"
            android:text="@string/tutor" />

        <RadioButton
            android:id="@+id/tabbar_item_home"
            style="@style/TabBarButtonItemTheme"
            android:drawableTop="@drawable/tabbar_button_home_selector"
            android:text="@string/mine" />
    </RadioGroup>
</LinearLayout>
