<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/afterPay"
        android:textAlignment="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/x10"
        android:layout_marginTop="@dimen/x30"
        android:text="@string/obligate"
        android:textAlignment="center"
        android:textColor="@color/globalBgColor"
        android:textSize="@dimen/x30" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/x1"
        android:background="@color/globalBgColor" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/x40">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/name"
            android:textColor="@android:color/black"
            android:textSize="@dimen/x16"
            android:textStyle="bold" />

        <View
            android:layout_width="@dimen/x1"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/x3"
            android:layout_marginTop="@dimen/x3"
            android:background="#73a7a3" />

        <EditText
            android:id="@+id/name_edittext"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:background="@null"
            android:hint="@string/input_name"
            android:inputType="textCapCharacters"
            android:textAlignment="center"
            android:textSize="@dimen/x15" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/x1"
        android:background="#73a7a3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/x40">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/contact"
            android:textColor="@android:color/black"
            android:textSize="@dimen/x16"
            android:textStyle="bold" />

        <View
            android:layout_width="@dimen/x1"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/x3"
            android:layout_marginTop="@dimen/x3"
            android:background="@color/globalBgColor" />

        <EditText
            android:id="@+id/phone_edittext"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:background="@null"
            android:hint="@string/input_contact"
            android:inputType="phone"
            android:textAlignment="center"
            android:textSize="@dimen/x15" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/x1"
        android:background="@color/globalBgColor" />

    <Button
        android:id="@+id/buy_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x44"
        android:layout_marginLeft="@dimen/x20"
        android:layout_marginRight="@dimen/x20"
        android:layout_marginTop="@dimen/x100"
        android:background="@color/globalBgColor"
        android:text="@string/buy_lesson"
        android:textColor="@android:color/white"
        android:textSize="@dimen/x18" />
</LinearLayout>
