<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/afterPay"
            android:textAlignment="center"
            android:textColor="#888888" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/x10"
            android:layout_marginTop="@dimen/x10"
            android:text="@string/obligate"
            android:textAlignment="center"
            android:textColor="#0088ff"
            android:textSize="@dimen/x25" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/x1"
            android:background="@color/globalBgColor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/x40">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/name"
                android:textColor="@android:color/black"
                android:textSize="@dimen/x16"
                android:textStyle="bold" />

            <View
                android:layout_width="@dimen/x1"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/x3"
                android:layout_marginTop="@dimen/x3"
                android:background="@color/globalBgColor" />

            <EditText
                android:id="@+id/name_edittext"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:background="@null"
                android:hint="@string/input_name"
                android:inputType="text"
                android:textAlignment="center"
                android:textSize="@dimen/x15" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/x1"
            android:background="@color/globalBgColor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/x40">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/sex"
                android:textColor="@android:color/black"
                android:textSize="@dimen/x16"
                android:textStyle="bold" />

            <View
                android:layout_width="@dimen/x1"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/x3"
                android:layout_marginTop="@dimen/x3"
                android:background="@color/globalBgColor" />

            <RadioGroup
                android:id="@+id/male_radiogroup"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="@dimen/x20"
                    android:checked="true"
                    android:text="@string/man" />

                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/x20"
                    android:text="@string/woman" />
            </RadioGroup>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/x1"
            android:background="@color/globalBgColor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/x40">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/age"
                android:textColor="@android:color/black"
                android:textSize="@dimen/x16"
                android:textStyle="bold" />

            <View
                android:layout_width="@dimen/x1"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/x3"
                android:layout_marginTop="@dimen/x3"
                android:background="@color/globalBgColor" />

            <EditText
                android:id="@+id/age_edittext"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:background="@null"
                android:hint="@string/inputAge"
                android:inputType="number"
                android:textAlignment="center"
                android:textSize="@dimen/x15" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/x1"
            android:background="@color/globalBgColor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/x40">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/contact"
                android:textColor="@android:color/black"
                android:textSize="@dimen/x16"
                android:textStyle="bold" />

            <View
                android:layout_width="@dimen/x1"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/x3"
                android:layout_marginTop="@dimen/x3"
                android:background="@color/globalBgColor" />

            <EditText
                android:id="@+id/phone_edittext"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:background="@null"
                android:hint="@string/input_contact"
                android:inputType="phone"
                android:textAlignment="center"
                android:textSize="@dimen/x15" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/x1"
            android:background="@color/globalBgColor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="3"
                android:gravity="center"
                android:paddingBottom="@dimen/x5"
                android:paddingTop="@dimen/x5"
                android:text="@string/wantToSolve"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="@dimen/x16"
                android:textStyle="bold" />

            <View
                android:layout_width="@dimen/x1"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/x3"
                android:layout_marginTop="@dimen/x3"
                android:background="@color/globalBgColor" />

            <EditText
                android:id="@+id/problem_edittext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="7"
                android:background="@null"
                android:hint="@string/questionDescribe"
                android:inputType="textImeMultiLine"
                android:padding="@dimen/x10"
                android:textAlignment="center"
                android:textSize="@dimen/x15" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/x1"
            android:background="@color/globalBgColor" />

        <Button
            android:id="@+id/commit_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x44"
            android:layout_marginLeft="@dimen/x10"
            android:layout_marginRight="@dimen/x10"
            android:layout_marginTop="@dimen/x50"
            android:background="@color/globalBgColor"
            android:text="@string/place_order"
            android:textColor="@android:color/white"
            android:textSize="@dimen/x18" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/x20"
            android:text="@string/be_careful" />
    </LinearLayout>
</ScrollView>
