<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_marginLeft="@dimen/x20"
            android:layout_marginRight="@dimen/x20"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x130"
            android:background="@drawable/login_rgister_textfield_bg">
            <EditText
                android:id="@+id/phone_edittext"
                android:paddingLeft="@dimen/x15"
                android:paddingRight="@dimen/x15"
                android:textColor="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:hint="@string/hintPhone"
                android:inputType="phone"
                android:background="@null"/>
            <EditText
                android:id="@+id/password_edittext"
                android:paddingLeft="@dimen/x15"
                android:paddingRight="@dimen/x15"
                android:textColor="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:hint="@string/hintCode"
                android:inputType="textPassword"
                android:background="@null"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <EditText
                    android:id="@+id/aouthcode_edittext"
                    android:paddingLeft="@dimen/x15"
                    android:paddingRight="@dimen/x15"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:textColor="@android:color/white"
                    android:layout_weight="1"
                    android:hint="@string/hintAuthCode"
                    android:inputType="number"
                    android:background="@null"/>
                <TextView
                    android:id="@+id/getcode_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/getAuthCode"
                    android:textColor="@android:color/white"
                    android:layout_marginRight="@dimen/x5"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="@dimen/x10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/x40">
            <Button
                android:id="@+id/agree_button"
                android:layout_marginRight="@dimen/x3"
                android:layout_width="@dimen/x20"
                android:layout_height="@dimen/x20"
                android:scaleType="centerCrop"
                android:background="@drawable/main_login_protocol_selector" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agree"
                android:layout_gravity="center_vertical"/>
            <TextView
                android:id="@+id/userprotocol_textview"
                android:textColor="@android:color/holo_orange_dark"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_protocol" />
        </LinearLayout>
    <Button
        android:id="@+id/regist_button"
        android:layout_marginLeft="@dimen/x20"
        android:layout_marginRight="@dimen/x20"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x44"
        android:layout_marginTop="@dimen/x30"
        android:text="@string/register"
        android:textColor="@android:color/white"
        android:textSize="@dimen/x17"
        android:background="@drawable/main_login_button_bg_shape"/>
    </LinearLayout>
</RelativeLayout>