<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content">
	<ImageView
		android:id="@+id/icon_imageveiw"
		android:layout_width="@dimen/x30"
		android:layout_height="@dimen/x30"
		android:layout_margin="@dimen/x5"
		android:layout_alignParentLeft="true"
		android:src="@drawable/btn_xx"
		android:layout_centerVertical="true"/>
	<TextView
		android:id="@+id/txt_title"
		android:layout_toRightOf="@+id/icon_imageveiw"
		android:layout_marginLeft="@dimen/x5"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerVertical="true"
		android:text="@string/nickName"
		android:maxWidth="@dimen/x80"
		android:textColor="@android:color/black"
		/>
	<TextView
		android:id="@+id/unreadcount_textview"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerVertical="true"
		android:layout_alignParentRight="true"
		android:layout_marginRight="@dimen/x5"
		android:background="@drawable/main_unreadcount_tv_bg_shape"
		android:textColor="@android:color/white"
		android:gravity="center"
		android:textSize="@dimen/x12"/>
	<TextView
		android:id="@+id/no_unread_textview"
		android:layout_width="wrap_content"
		android:layout_height="@dimen/x40"
		android:text="@string/no_unRead"
		android:layout_centerHorizontal="true"
		android:gravity="center_vertical"
		android:textColor="@android:color/holo_red_dark"/>
	<TextView
		android:id="@+id/more_textview"
		android:layout_width="wrap_content"
		android:layout_height="@dimen/x30"
		android:text="@string/more"
		android:gravity="center_vertical"
		android:layout_centerHorizontal="true"
		android:textColor="@android:color/holo_red_dark"/>
	 
</RelativeLayout>